# OmniView3D

./: .clangd  CMakeLists.txt  Convert3D.h  IconTools.h  README.md  axes_shader.frag  axes_shader.vert  base_shader.frag  base_shader.vert  fileparser.cpp  fileparser.h  glwidget.cpp  glwidget.h  lightdialog.cpp  lightdialog.h  lightdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
